# sheng-sentiment-base

./: .gitignore  .windsurfrules  ARCH.md  Dockerfile  EVALUATION_REPORT.md  FINAL_VERIFICATION_REPORT.md  LICENSE  README.md  WINDSURF_PRD.md  demo_api.py  demo_app.py  docker-compose.yml  misclassifications.csv  pyproject.toml  requirements.txt  stress_test_api.py  validation_set_v2.jsonl
data/dictionaries/: sheng_dictionary.json
data/metrics/: latest_evaluation.json
docs/: API_REFERENCE.md
src/: __init__.py
src/api/: __init__.py  main.py  middleware.py  models.py
src/engine/: __init__.py  logic.py  pipeline.py
src/pipelines/: __init__.py  sheng_pipeline.py
src/scrapers/: __init__.py  real_world_scraper.py  sheng_scraper.py
src/tokenizers/: __init__.py  intent_engine.py  sheng_tokenizer.py
src/utils/: __init__.py  config.py  export_training_data.py  generate_synthetic_data.py  logger.py
tests/: __init__.py  auto_evaluator.py  evaluate_accuracy.py  test_tokenizer.py
