[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sheng-sentiment-base"
version = "0.4.0"
description = "Contextual sentiment analysis and logistics intent detection for Kenyan Sheng"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "okech-christopher", email = "okechobonyo@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic"
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.5.0",
    "requests>=2.33.0",
    "fake-useragent>=1.4.0",
    "streamlit>=1.57.0",
    "python-multipart>=0.0.27"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0"
]

[project.urls]
Homepage = "https://github.com/okech-christopher/sheng-sentiment-base"
Repository = "https://github.com/okech-christopher/sheng-sentiment-base.git"
Issues = "https://github.com/okech-christopher/sheng-sentiment-base/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

# Sheng-Native Configuration
[tool.sheng-native]
MIN_CONFIDENCE_THRESHOLD = 0.91
LOGISTICS_CONFIDENCE_THRESHOLD = 0.7
FINANCIAL_RECLASSIFICATION_THRESHOLD = 0.7
DICTIONARY_VERSION = "v0.4"
PIPELINE_VERSION = "1.0.0"
